--- a/src/godot_app/export_presets.cfg
+++ b/src/godot_app/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="app"
+name="godot_app"
 platform="Web"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../app.html"
+export_path="../index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
