fleshed out page and style to mirror godot's web style, added ace-editor web component and update button

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gdshadertoy",
+  "name": "gdshader-playground",
   "version": "1.0.0",
   "description": "Web-based editor for Godot canvas shaders.",
   "main": "app.html",
